EBER/simple-motor/simple-motor.sdk/.metadata/.plugins/org.eclipse.cdt.ui/mastcam_cntrl.build.log
13:20:54 **** Auto Build of configuration Debug for project mastcam_cntrl ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/MastcamSupport.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/MastcamSupport.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../mastcam_cntrl_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/MastcamSupport.d" -MT"src/MastcamSupport.o" -o "src/MastcamSupport.o" "../src/MastcamSupport.c"
../src/MastcamSupport.c:38:5: error: conflicting types for 'mastcam_init'
 int mastcam_init(XScuGic *Intc, Mastcam *mastcam){
     ^~~~~~~~~~~~
In file included from ../src/MastcamSupport.c:8:0:
../src/MastcamSupport.h:27:5: note: previous declaration of 'mastcam_init' was here
 int mastcam_init(Mastcam *mastcam);
     ^~~~~~~~~~~~
../src/MastcamSupport.c: In function 'mastcam_init':
../src/MastcamSupport.c:46:32: error: expected expression before 'XScuGic'
  Status = XUartLite_Initialize(XScuGic *Intc, &(mastcam->uart_dev), MASTCAM_UART_DEV_ID);
                                ^~~~~~~
../src/MastcamSupport.c:46:11: error: too few arguments to function 'XUartLite_Initialize'
  Status = XUartLite_Initialize(XScuGic *Intc, &(mastcam->uart_dev), MASTCAM_UART_DEV_ID);
           ^~~~~~~~~~~~~~~~~~~~
In file included from ../src/MastcamSupport.h:7:0,
                 from ../src/MastcamSupport.c:8:
../../mastcam_cntrl_bsp/ps7_cortexa9_0/include/xuartlite.h:244:5: note: declared here
 int XUartLite_Initialize(XUartLite *InstancePtr, u16 DeviceId);
     ^~~~~~~~~~~~~~~~~~~~
../src/MastcamSupport.c:13:34: error: 'XPAR_INTC_0_UARTLITE_0_VEC_ID' undeclared (first use in this function)
 #define MASTCAM_UART_DEV_INT_ID  XPAR_INTC_0_UARTLITE_0_VEC_ID
                                  ^
../src/MastcamSupport.c:57:68: note: in expansion of macro 'MASTCAM_UART_DEV_INT_ID'
  Status = UartLiteSetupInterruptSystem(Intc, &(mastcam->uart_dev), MASTCAM_UART_DEV_INT_ID);
                                                                    ^~~~~~~~~~~~~~~~~~~~~~~
../src/MastcamSupport.c:13:34: note: each undeclared identifier is reported only once for each function it appears in
 #define MASTCAM_UART_DEV_INT_ID  XPAR_INTC_0_UARTLITE_0_VEC_ID
                                  ^
../src/MastcamSupport.c:57:68: note: in expansion of macro 'MASTCAM_UART_DEV_INT_ID'
  Status = UartLiteSetupInterruptSystem(Intc, &(mastcam->uart_dev), MASTCAM_UART_DEV_INT_ID);
                                                                    ^~~~~~~~~~~~~~~~~~~~~~~
../src/MastcamSupport.c: In function 'mastcam_move':
../src/MastcamSupport.c:69:6: warning: unused variable 'sent_count' [-Wunused-variable]
  int sent_count, ret;
      ^~~~~~~~~~
../src/MastcamSupport.c: In function 'UartLiteSetupInterruptSystem':
../src/MastcamSupport.c:144:17: error: 'IntcInstancePtr' undeclared (first use in this function)
  XScuGic_Enable(IntcInstancePtr, IntrId);
                 ^~~~~~~~~~~~~~~
make: *** [src/MastcamSupport.o] Error 1

13:20:54 Build Finished (took 622ms)

